--- a/chapter-commandline.texi
+++ b/chapter-commandline.texi
@@ -38,8 +38,9 @@
 
 @item Show existing queues with priorities
 
+@example
 @verbatim
-tapper@bancroft:~> tapper-testrun listqueue -v
+$ tapper-testrun listqueue -v
         10 |              AdHoc |  1000
         11 |      kernel_reboot |   100
          4 | xen-3.3-testing-32 |   100
@@ -49,29 +50,35 @@ tapper@bancroft:~> tapper-testrun listqueue -v
          9 |    xen-unstable-32 |   100
          8 |    xen-unstable-64 |   100
 @end verbatim
+@end example
 
 @item Create new queue @emph{oprofile}
 
+@example
 @verbatim
-tapper@bancroft:~> tapper-testrun newqueue --name=oprofile \
-                                             --priority=200
+$ tapper-testrun newqueue --name=oprofile \
+                          --priority=200
 12
 @end verbatim
+@end example
 
 @item Create new host @emph{bullock} and bind it to queue @emph{oprofile}
 
+@example
 @verbatim
-tapper@bancroft:~> tapper-testrun newhost --name=bullock \
-                                            --queue=oprofile
+$ tapper-testrun newhost --name=bullock \
+                         --queue=oprofile
 10
 @end verbatim
+@end example
 
 @item Show existing hosts
 
 Note that the new host @emph{bullock} is initially deactivated.
 
+@example
 @verbatim
-tapper@bancroft:~> tapper-testrun listhost -v
+$ tapper-testrun listhost -v
          8 |  amarok | deactivated |   free
          1 |  athene |      active | in use
          9 |   azael | deactivated |   free
@@ -83,23 +90,27 @@ tapper@bancroft:~> tapper-testrun listhost -v
          3 |   satyr |      active | in use
          7 |    uruk | deactivated |   free
 @end verbatim
+@end example
 
 @item Activate host @emph{bullock}
 
 Note that this command is ID based (bullock has id 10) because you
 can rename hosts.
 
+@example
 @verbatim
-tapper@bancroft:~> tapper-testrun updatehost --id=10 --active
+$ tapper-testrun updatehost --id=10 --active
 10 | bullock | active | free | oprofile
 @end verbatim
+@end example
 
 @item Again, show existing hosts
 
 Host @emph{bullock} is now activated.
 
+@example
 @verbatim
-tapper@bancroft:~> tapper-testrun listhost -v
+$ tapper-testrun listhost -v
          8 |  amarok | deactivated |   free
          1 |  athene |      active | in use
          9 |   azael | deactivated |   free
@@ -111,6 +122,7 @@ tapper@bancroft:~> tapper-testrun listhost -v
          3 |   satyr |      active | in use
          7 |    uruk | deactivated |   free
 @end verbatim
+@end example
 
 @end itemize
 
@@ -123,8 +135,9 @@ Done.
 
 @item List existing queues
 
+@example
 @verbatim
-tapper@bancroft:~> tapper-testrun listqueue -v
+$ tapper-testrun listqueue -v
         10 |              AdHoc |  1000
         11 |      kernel_reboot |   100
         12 |           oprofile |   200 | bullock
@@ -135,19 +148,23 @@ tapper@bancroft:~> tapper-testrun listqueue -v
          9 |    xen-unstable-32 |   100
          8 |    xen-unstable-64 |   100
 @end verbatim
+@end example
 
 @item Update queue
 
+@example
 @verbatim
-tapper@bancroft:~> tapper-testrun updatequeue --name=oprofile \
-                                                --priority=1000
+$ tapper-testrun updatequeue --name=oprofile \
+                             --priority=1000
 12
 @end verbatim
+@end example
 
 @item Again, list existing queues
 
+@example
 @verbatim
-tapper@bancroft:~> tapper-testrun listqueue -v
+$ tapper-testrun listqueue -v
         10 |              AdHoc |  1000
         11 |      kernel_reboot |   100
         12 |           oprofile |  1000 | bullock
@@ -158,6 +175,7 @@ tapper@bancroft:~> tapper-testrun listqueue -v
          9 |    xen-unstable-32 |   100
          8 |    xen-unstable-64 |   100
 @end verbatim
+@end example
 
 Done.
 
@@ -204,10 +222,11 @@ Freeing a host need the config for the currently running
 testrun. Thus, the command is only tested on bancroft and may not work
 on other machines.
 
+@example
 @verbatim
-
-tapper@bancroft:~> tapper-testrun freehost \
---name=bullock --desc='I need this host right now'
-
+$ tapper-testrun freehost \
+                 --name=bullock\
+                 --desc='I need this host right now'
 @end verbatim
+@end example
 
