--- a/tapper-manual.texi
+++ b/tapper-manual.texi
@@ -35,7 +35,7 @@ Copyright 2008-2011 AMD Operating System Research Center
 Copyright @copyright{} 2008-2011 AMD Operating System Research Center
 @end titlepage
 
-@node Top, Synopsis, (dir), (dir)
+@node Top,  , (dir), (dir)
 
 @ifinfo
 This document describes the Tapper Test and Automation Infrastructure
