--- a/chapter-usecases.texi
+++ b/chapter-usecases.texi
@@ -4,6 +4,11 @@
 In this chapter we describe how the single features are put together
 into whole use-cases.
 
+@menu
+* Automatic Xen testing::       
+@end menu
+
+@node Automatic Xen testing,  , Complete Use Cases, Complete Use Cases
 @section Automatic Xen testing
 
 This is a description on how to run Xen tests with Tapper using
